@@ -1,3 +1,6 @@
+2 December 2008
++ Fixed access shortcuts to work with GET arrays
+
 Version 1.1.1
 ---------------------------------------------------------------------------
 25 November 2008
